--- a/public/Dashboard/dashboard.css
+++ b/public/Dashboard/dashboard.css
@@ -2,6 +2,11 @@
     padding: 0;
     margin: 0;
     border:  0;
+    color: white;
+}
+
+button{
+    background-color: inherit;
 }
 
 .fb-logo-link{
@@ -13,8 +18,69 @@ main{
     height: 90vh;
 }
 
+nav{
+    background-color: rgb(36,37,38);
+    color: white;
+    
+}
+
 .left,
 .middle,
 .right{
+    height: 100%;
+}
+
+.middle{
+    background-color: rgb(24,25,26);
+}
+
+.inner-middle{
+    height: 100%;
+    background-color: rgb(24,25,26);
+}
+
+.story-div{
+    height: 40vh;
+    background-color: rgb(36,37,38);
+}
+
+.post-div{
+    /* height: 20vh; */
+    background-color: rgb(36,37,38);
+    font-size: 18px;
+}
+
+.pix-div{
+    height: 2.5rem;
+}
+
+.pix{
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.post-box{
+    cursor: pointer;
+    background-color: rgb(58,59,60);
+}
+
+.grey{
+    color: rgb(176,179,184);
+    font-weight: 600;
+}
+
+#myPostModal{
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.664);
+    top: -10vh;
+    left: 0;
+    z-index: 50;
+}
+
+#open-post-modal{
+    height: 75%;
+}
+
+#write-post-modal{
     height: 100%;
 }
