--- a/public/Dashboard/dashboard.css
+++ b/public/Dashboard/dashboard.css
@@ -143,12 +143,27 @@ input {
     background-color: rgb(58,59,60);
 }
 
+.comment-btn{
+    right: 0.6rem;
+    top: 0.1rem;
+    width: 1.8rem;
+    height: 1.8rem;
+}
+
+.comment-btn:hover{
+    background-color: rgb(89, 89, 90);
+}
+
+.send-comment{
+    font-size: 15px;
+}
+
 ::-webkit-scrollbar{
     display: none;
 }
 
 /* @media (max-width: 1115px) {
-    .right{
+    .left{
         display: none;
     }
 
