been able to pass the id from the get document function to the like button function successfully, I was passing the id directly before instead of passing as a string, like passing (example) instead of ('example')

--- a/public/Dashboard/dashboard.css
+++ b/public/Dashboard/dashboard.css
@@ -171,7 +171,7 @@ input {
     display: none;
 }
 
-/* @media (max-width: 1115px) {
+@media (max-width: 1115px) {
     .left{
         display: none;
     }
@@ -180,4 +180,4 @@ input {
         width: 75%;
     }
 
-} */
+}
