--- a/public/Dashboard/dashboard.css
+++ b/public/Dashboard/dashboard.css
@@ -174,6 +174,10 @@ input {
     font-size: 15px;
 }
 
+.profile-btn:hover{
+    background-color: rgb(89, 89, 90);
+}
+
 ::-webkit-scrollbar{
     /* display: none; */
 }
