been able to add a profile button and write the function that navigates from dashboard to the profile page, on the profile page, you can only view the current user's post alone while on the dashboard page, you can view all user's post

--- a/public/Dashboard/dashboard.css
+++ b/public/Dashboard/dashboard.css
@@ -178,6 +178,11 @@ input {
     background-color: rgb(89, 89, 90);
 }
 
+#profile-name{
+    font-weight: 600;
+    font-size: 18px;
+}
+
 ::-webkit-scrollbar{
     /* display: none; */
 }
