--- a/public/Dashboard/dashboard.css
+++ b/public/Dashboard/dashboard.css
@@ -180,6 +180,16 @@ input {
     font-size: 18px;
 }
 
+.like-icon-div{
+    height: 0.5rem;
+    width: 0.5rem;
+}
+
+.like-icon{
+    padding: 0.3rem 0.4rem;
+    font-size: 0.7rem;
+}
+
 ::-webkit-scrollbar{
     /* display: none; */
 }
